# licorne-gaming

./: .gitignore  LICENSE  README.md  docker-compose.yaml
back/: Cargo.toml  dev.sh
back/docker/: Dockerfile  cmd.sh
back/migrations/2023-10-27-220819_create_users/: up.sql
back/src/: auth.rs  bearer_from_cookie_to_header.rs  database.rs  main.rs  models.rs  schema.rs
front/: Cargo.toml  index.html  tailwind.config.js
front/docker/: Dockerfile
front/src/: client_helper.rs  main.rs
front/src/app/: account.rs  home.rs  login.rs  mod.rs
front/src/app/auth/: login.rs  mod.rs  register.rs
front/src/components/: button.rs  mod.rs  text_input.rs
openapi/docker/: Dockerfile  cmd.sh
