[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.57", features = ["cookie"] }
poem-openapi = { version = "3.0.1", features = ["swagger-ui"] }
tokio = { version = "1.29.1", features = ["full"] }
