[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
poem = { version = "1.3.57", features = ["cookie"] }
poem-openapi = { version = "3.0.1", features = ["swagger-ui", "email"] }
tokio = { version = "1.29.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
futures-util = "0.3.29"
