[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
leptos-use = "0.6.2"
leptos_router = { version = "0.4.6", features = ["csr", "nightly"] }
gloo-net = "0.3.1"
