[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../openapi/out" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos-use = "0.9.0"
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
tracing-subscriber = { version = "0.3.17" }
tracing-web = "0.1.2"
